[package]
name = "altpay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bitcoin = "0.29.2"
bitcoin_hashes = "0.11.0"
chrono = "0.4.23"
cln-plugin = "0.1.2"
cln-rpc = "0.1.2"
config = "0.13.3"
lightning = "0.0.113"
lightning-invoice = "0.21.0"
lightning-rapid-gossip-sync = "0.0.113"
log = "0.4.17"
rand = "0.8.5"
rand_core = "0.6.4"
reqwest = "0.11.14"
serde = "1.0.152"
serde_derive = "1.0.160"
serde_json = "1.0.92"
tokio = { version =  "1.25.0", features = ["full"]}
tokio-util = "0.7.7"
